test/tasty/neg/src-2/TestDelayedPrivateInverse.check
TestDelayedPrivateInverse_fail.scala:6: error: value Internal is not a member of object tastytest.DelayedPrivateInverse
    val _ = DelayedPrivateInverse.Internal
                                  ^
1 error
